adds a PredictionVideo class

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T18:26:12.589083Z",
-     "start_time": "2024-09-18T18:26:09.684348Z"
+     "end_time": "2024-09-25T10:55:46.661743Z",
+     "start_time": "2024-09-25T10:55:44.006259Z"
     },
     "collapsed": true
    },
@@ -16,12 +16,11 @@
     "import numpy as np\n",
     "\n",
     "import adaptive_latents\n",
-    "from adaptive_latents import AnimationManager, Pipeline, CenteringTransformer, proSVD, Bubblewrap, VanillaOnlineRegressor, NumpyTimedDataSource, KernelSmoother, Concatenator\n",
+    "from adaptive_latents import AnimationManager, Pipeline, CenteringTransformer, proSVD, Bubblewrap, VanillaOnlineRegressor, NumpyTimedDataSource, KernelSmoother, Concatenator, sjPCA\n",
     "import adaptive_latents.input_sources.datasets as datasets\n",
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm\n",
-    "import copy\n"
+    "from tqdm.notebook import tqdm\n"
    ]
   },
   {
@@ -38,8 +37,8 @@
    "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T18:26:20.395049Z",
-     "start_time": "2024-09-18T18:26:12.589875Z"
+     "end_time": "2024-09-23T18:53:58.387738Z",
+     "start_time": "2024-09-23T18:53:51.017850Z"
     }
    },
    "outputs": [],
@@ -76,7 +75,8 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "## Regression video"
+    "\n",
+    "## Combination and prediction video\n"
    ]
   },
   {
@@ -85,42 +85,49 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T18:28:00.495595Z",
-     "start_time": "2024-09-18T18:27:59.717526Z"
+     "end_time": "2024-09-25T11:11:21.625554Z",
+     "start_time": "2024-09-25T11:11:14.858288Z"
     }
    },
    "outputs": [],
    "source": [
-    "d = datasets.Temmar24uDataset()\n",
     "\n",
-    "\n",
-    "p = Pipeline([\n",
-    "    proSVD(k=6, input_streams={0:'X'}, output_streams={0:0}),\n",
-    "    KernelSmoother(tau=0.2/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
-    "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2}),\n",
-    "    Bubblewrap(\n",
-    "        num=250,\n",
-    "        eps=1e-3,\n",
-    "        step=1,\n",
-    "        num_grad_q=3,\n",
-    "        input_streams={2:'X'}, \n",
-    "        output_streams={2:2},\n",
-    "        # log_level=1\n",
-    "    ),\n",
-    "    VanillaOnlineRegressor(\n",
-    "        input_streams={2:'X', 3:'Y'},\n",
-    "        output_streams={2:2},\n",
-    "    ),\n",
-    "])\n",
-    "\n",
-    "bw: Bubblewrap = p.steps[-2]\n",
-    "reg: VanillaOnlineRegressor = p.steps[-1]\n",
+    "d = datasets.Odoherty21Dataset()\n",
     "\n",
     "streams = []\n",
     "streams.append( (d.neural_data,     0) )\n",
     "streams.append( (d.behavioral_data, 1) )\n",
     "streams.append( (d.behavioral_data, 3) )\n",
-    "iterator = p.streaming_run_on(streams, return_output_stream=True)"
+    "\n",
+    "p1 = Pipeline([\n",
+    "    CenteringTransformer(input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    KernelSmoother(tau=0.08/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}),\n",
+    "    pro:=proSVD(k=6, input_streams={2:'X'}, output_streams={2:2}),\n",
+    "    sjPCA(input_streams={2:'X'}, output_streams={2:2}),\n",
+    "])\n",
+    "\n",
+    "p2 = Pipeline([\n",
+    "    bw:=Bubblewrap(\n",
+    "        num=100,\n",
+    "        eps=1e-3,\n",
+    "        step=1e-1,\n",
+    "        num_grad_q=3,\n",
+    "        sigma_orig_adjustment=5000,\n",
+    "        input_streams={2:'X'},\n",
+    "        output_streams={2:2},\n",
+    "    ),\n",
+    "    reg:=VanillaOnlineRegressor(\n",
+    "        input_streams={2:'X', 3:'Y'},\n",
+    "        output_streams={2:2},\n",
+    "    ),\n",
+    "])\n",
+    "\n",
+    "\n",
+    "\n",
+    "video_dt = 0.05\n",
+    "video_ts = np.arange(200)*video_dt + 50 \n",
+    "streams.append( (NumpyTimedDataSource(np.nan * video_ts, video_ts), 'video') )\n"
    ]
   },
   {
@@ -129,7 +136,7 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2024-09-18T18:28:02.985114Z"
+     "start_time": "2024-09-25T11:11:21.629494Z"
     },
     "jupyter": {
      "is_executing": true
@@ -137,50 +144,56 @@
    },
    "outputs": [],
    "source": [
-    "time_between_draws = .1\n",
-    "time_of_last_draw = 500\n",
-    "exit_time = 510\n",
-    "prediction = []\n",
-    "prediction_t = []\n",
-    "pbar = tqdm(total=exit_time)\n",
+    "# vid = pf.PredictionVideo(d, fps=1/video_dt)\n",
     "\n",
-    "with AnimationManager(n_cols=1, n_rows=1, figsize=(10, 5)) as am:\n",
-    "    ax = am.axs[0,0]\n",
-    "    ax.text(.01, .01, \"\\n\".join([f\"{k}: {v}\" for k, v in p.get_params().items()]), transform=ax.transAxes, fontsize='xx-small', wrap=True)\n",
-    "    am.grab_frame()\n",
-    "    \n",
-    "    for output, stream in iterator:\n",
-    "        current_t = output.t\n",
-    "        pbar.update(current_t - pbar.n)\n",
+    "pbar = tqdm(total=video_ts[-1])\n",
+    "latents = []\n",
+    "latent_ts = []\n",
     "\n",
-    "        if stream == 3 and current_t > time_of_last_draw - 10:\n",
-    "            prediction_offset = .1\n",
-    "            time_to_predict = bw.last_timepoint + prediction_offset\n",
-    "            output = reg.predict(bw.get_alpha_at_t(time_to_predict))\n",
-    "            prediction.append(output)\n",
-    "            prediction_t.append(time_to_predict)\n",
+    "latent_predictions = []\n",
+    "beh_predictions = []\n",
+    "prediction_ts = []\n",
     "\n",
-    "        if current_t > time_of_last_draw + time_between_draws:\n",
-    "            old_axes = ax.axis()\n",
+    "with AnimationManager(fps=1/video_dt) as am:\n",
+    "    for output, stream in Pipeline().streaming_run_on(streams, return_output_stream=True):\n",
+    "        # dim reduction part of pipeline\n",
+    "        output, stream = p1.partial_fit_transform(output, stream, return_output_stream=True)\n",
+    "        if stream == 2 and np.isfinite(output).all():\n",
+    "            latents.append(output)\n",
+    "            latent_ts.append(output.t)\n",
+    "\n",
+    "        # prediction part of pipeline\n",
+    "        output, stream = p2.partial_fit_transform(output, stream, return_output_stream=True)\n",
+    "        if stream == 2 and np.isfinite(output).all():\n",
+    "            prediction_t = output.t+bw.dt*1\n",
+    "            alpha_pred = bw.get_alpha_at_t(prediction_t)\n",
+    "            latent_prediction = np.array(bw.mu[np.argmax(alpha_pred)])\n",
+    "            beh_prediction = reg.predict(alpha_pred)\n",
+    "\n",
+    "            latent_predictions.append(latent_prediction)\n",
+    "            beh_predictions.append(beh_prediction)\n",
+    "            prediction_ts.append(prediction_t)\n",
+    "            \n",
+    "        \n",
+    "        if stream == 'video':\n",
+    "            ax: plt.Axes = am.axs[0,0]\n",
     "            ax.cla()\n",
-    "\n",
-    "            s = (current_t-5 < d.behavioral_data.t) & (d.behavioral_data.t < current_t)\n",
-    "            ax.plot(d.behavioral_data.t[s], d.behavioral_data.a[s,0,0])\n",
-    "            ax.plot(d.behavioral_data.t[s], d.behavioral_data.a[s,0,1])\n",
-    "\n",
-    "            if len(prediction):\n",
-    "                pt = np.array(prediction_t)\n",
-    "                s = (current_t-5 < pt) & (pt < current_t)\n",
-    "                pred = np.squeeze(prediction)[s]\n",
-    "                ax.plot(pt[s], pred[:, 0], 'k')\n",
-    "                ax.plot(pt[s], pred[:, 1], 'k')\n",
-    "\n",
-    "            pf.use_bigger_lims(ax, old_axes, x=False)\n",
+    "            \n",
+    "            bw.scatter_data_with_decay(ax,np.squeeze(latents)[np.array(latent_ts) > 10])\n",
+    "            bw.show_bubbles_2d(ax)\n",
+    "            \n",
     "            am.grab_frame()\n",
-    "            time_of_last_draw = current_t\n",
+    "            \n",
+    "            if output.t == video_ts[-1]:\n",
+    "                break\n",
     "\n",
-    "        if current_t > exit_time:\n",
-    "            break\n",
+    "        pbar.update(output.t - pbar.n)\n",
+    "\n",
+    "\n",
+    "latents = np.squeeze(latents)\n",
+    "latent_predictions = np.squeeze(latent_predictions)\n",
+    "beh_predictions = np.squeeze(beh_predictions)\n",
+    "prediction_ts = np.squeeze(prediction_ts)\n",
     "\n"
    ]
   },
@@ -190,15 +203,70 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T19:14:56.596817Z",
-     "start_time": "2024-09-17T19:14:56.414383Z"
+     "end_time": "2024-09-25T11:07:29.491154Z",
+     "start_time": "2024-09-25T11:07:29.369589Z"
     }
    },
    "outputs": [],
    "source": [
     "\n",
     "fig, ax = plt.subplots()\n",
-    "reg.plot_preq_error(ax)"
+    "# ax.hist2d(latents[:,0], latents[:,1], bins=50);\n",
+    "s = np.array(latent_ts) > 10\n",
+    "ax.scatter(latents[s,0], latents[s,1], s=5, alpha=.1, c='C0', edgecolors='none')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-24T19:18:00.502867Z",
+     "start_time": "2024-09-24T19:18:00.115321Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "pf.plot_history_with_tail(ax, latents)\n",
+    "means = np.mean(latents, axis=0)\n",
+    "ax.arrow(latents[-1,0], latents[-1,1], means[0] - latents[-1,0], means[1] - latents[-1,1], zorder=5, head_width=.1, color='k')\n",
+    "\n",
+    "ax.axis('off');\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-24T19:18:10.152180Z",
+     "start_time": "2024-09-24T19:18:09.742439Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "assert isinstance(d, datasets.Zong22Dataset)\n",
+    "desired_pattern = np.mean(latents[-101:-1], axis=0)\n",
+    "current_pattern = latents[-1]\n",
+    "desired_stim = desired_pattern - current_pattern\n",
+    "\n",
+    "desired_pattern = (desired_stim @ pro.Q.T)[:d.neural_data.a.shape[-1]]\n",
+    "\n",
+    "near_zero = np.abs(desired_stim) < 100\n",
+    "print(near_zero.sum())\n",
+    "desired_stim[near_zero] = np.nan\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "d.show_stim_pattern(ax, np.abs(desired_pattern))\n",
+    "\n"
    ]
   }
  ],
