adds parameters that give good performance
makes bubblewrap compare_plots plot time
switches the order of the arguments when interploating data

--- a/notebooks/regressions.ipynb
+++ b/notebooks/regressions.ipynb
@@ -39,7 +39,8 @@
     "import sklearn.decomposition\n",
     "import pandas as pd\n",
     "import adaptive_latents\n",
-    "from adaptive_latents.transforms.jpca import apply_prosvd_and_sjpca_and_cache"
+    "from adaptive_latents.transforms.jpca import apply_prosvd_and_sjpca_and_cache\n",
+    "\n"
    ]
   },
   {
@@ -196,7 +197,7 @@
     "        bin_width=0.03,\n",
     "    )\n",
     "    \n",
-    "    resampled_behavior = fin.resample_matched_timeseries(beh, bin_centers, beh_t)\n",
+    "    resampled_behavior = fin.resample_matched_timeseries(beh, beh_t, bin_centers,)\n",
     "    beh, beh_t = resampled_behavior, bin_centers\n",
     "\n",
     "\n",
@@ -252,7 +253,7 @@
     "if dataset_chosen == \"musal\":\n",
     "    ca, vid, t_ca, t_vid = adaptive_latents.input_sources.datasets.generate_musal_dataset(cam=1, video_target_dim=6, resize_factor=1, prosvd_init_size=100)\n",
     "    \n",
-    "    resampled_vid = fin.resample_matched_timeseries(vid, t_ca, t_vid)\n",
+    "    resampled_vid = fin.resample_matched_timeseries(vid, t_vid, t_ca)\n",
     "    \n",
     "    pre_datasets = {\n",
     "        's(ca,6) # i o': fin.prosvd_data(input_arr=ca, output_d=6, init_size=30),\n",
@@ -315,7 +316,7 @@
    "source": [
     "if dataset_chosen == \"jenkins\":\n",
     "    obs, beh, obs_t, beh_t = adaptive_latents.input_sources.datasets.construct_jenkins_data(bin_width=0.03)\n",
-    "    beh, beh_t = fin.resample_matched_timeseries(beh, obs_t, beh_t), obs_t\n",
+    "    beh, beh_t = fin.resample_matched_timeseries(beh, beh_t, obs_t, ), obs_t\n",
     "    obs, obs_t = smooth_columns(obs, obs_t, kernel_length=10)\n",
     "    pre_datasets = {\n",
     "        's(obs,4) # i o': (fin.prosvd_data(input_arr=obs, output_d=4, init_size=4, centering=True), obs_t),\n",
