--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -24,8 +24,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hostname"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
    "metadata": {},
    "source": [
     "\n",
@@ -35,19 +45,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-26T17:38:47.456219Z",
      "start_time": "2024-09-26T17:37:13.504589Z"
-    },
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
     }
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "%matplotlib inline\n",
     "d = datasets.Odoherty21Dataset()\n",
     "\n",
@@ -66,14 +73,13 @@
     "\n",
     "p2 = Pipeline([\n",
     "    bw:=Bubblewrap(\n",
-    "        num=150,\n",
+    "        num=500,\n",
     "        eps=1e-6,\n",
-    "        step=1e-4,\n",
+    "        step=1e-3,\n",
     "        num_grad_q=1,\n",
-    "        sigma_orig_adjustment=50000,\n",
     "        input_streams={2:'X'},\n",
     "        output_streams={2:2},\n",
-    "        log_level=1\n",
+    "        log_level=1,\n",
     "    ),\n",
     "    reg:=VanillaOnlineRegressor(\n",
     "        input_streams={2:'X', 3:'Y'},\n",
@@ -84,7 +90,7 @@
     "\n",
     "\n",
     "video_dt = 0.1\n",
-    "video_ts = np.arange(500)*video_dt + 50\n",
+    "video_ts = np.arange(50)*video_dt + 25\n",
     "streams.append( (NumpyTimedDataSource(np.nan * video_ts, video_ts), 'video') )\n",
     "\n",
     "\n",
@@ -159,7 +165,7 @@
     "\n",
     "plt.close()\n",
     "plt.close()\n",
-    "Bubblewrap.compare_runs([bw])\n",
+    "Bubblewrap.compare_runs([bw]], t_in_samples=True)\n",
     "plt.show()\n",
     "\n",
     "if pred_am is not None:\n",
@@ -169,13 +175,15 @@
     "if bw_am is not None:\n",
     "    display(Video(bw_am.outfile, embed=True, width=700))\n",
     "\n",
-    "\n"
+    "fig, ax = plt.subplots()\n",
+    "ax.matshow(bw.log['alpha'][-30:])\n",
+    "ax.set_title('alpha')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-25T17:30:59.363269Z",
@@ -184,21 +192,43 @@
    },
    "outputs": [],
    "source": [
-    "    \n",
-    "for i in range(3):\n",
-    "    test_s = (d.behavioral_data.t > np.median(d.behavioral_data.t)) & np.isfinite(d.behavioral_data.a).all(axis=2)[:,0]\n",
     "\n",
-    "    estimates = np.interp(d.behavioral_data.t[test_s], prediction_ts, beh_predictions[:,i])\n",
-    "    targets = d.behavioral_data.a[test_s,0,i]\n",
-    "    errors = estimates - targets\n",
+    "test_s = (\n",
+    "    (d.behavioral_data.t > ((prediction_ts[0] + prediction_ts[1])/2))\n",
+    "    &\n",
+    "    (np.isfinite(d.behavioral_data.a).all(axis=2)[:,0])\n",
+    ")\n",
     "\n",
-    "    print(np.corrcoef(estimates, targets)[0,1])"
+    "# estimates = adaptive_latents.utils.resample_matched_timeseries(beh_predictions, prediction_ts, d.behavioral_data.t[test_s])\n",
+    "# targets = d.behavioral_data.a[test_s,0,:]\n",
+    "\n",
+    "estimates = adaptive_latents.utils.resample_matched_timeseries(d.behavioral_data.a[test_s,0,:],d.behavioral_data.t[test_s],  prediction_ts)\n",
+    "targets = beh_predictions\n",
+    "\n",
+    "errors = estimates - targets\n",
+    "\n",
+    "print([np.corrcoef(estimates[:,i], targets[:,i])[0,1] for i in range(3)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(3):\n",
+    "    plt.plot(prediction_ts/bw.dt, estimates[:,i], color=f'C{i}')\n",
+    "    plt.plot(prediction_ts/bw.dt, targets[:,i], color=f'C{i}', alpha=.5, label=f'{np.corrcoef(estimates[:,i], targets[:,i])[0,1]:.3f}')\n",
+    "plt.xlabel(\"time (samples)\")\n",
+    "plt.ylabel(\"behavior\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-26T16:19:16.633853Z",
@@ -232,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-26T16:19:18.836031Z",
@@ -255,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-26T16:19:20.991881Z",
@@ -282,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -291,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
