fixes the units in get_alpha_at_t

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-26T17:35:13.225825Z",
-     "start_time": "2024-09-26T17:35:11.746669Z"
+     "end_time": "2024-09-27T16:39:35.093489Z",
+     "start_time": "2024-09-27T16:39:33.417747Z"
     }
    },
    "outputs": [],
@@ -27,7 +27,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T16:39:35.404604Z",
+     "start_time": "2024-09-27T16:39:35.094587Z"
+    }
+   },
    "outputs": [],
    "source": [
     "!hostname"
@@ -48,8 +53,12 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-26T17:38:47.456219Z",
-     "start_time": "2024-09-26T17:37:13.504589Z"
+     "end_time": "2024-09-27T16:43:19.500535Z",
+     "start_time": "2024-09-27T16:39:35.407274Z"
+    },
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
     }
    },
    "outputs": [],
@@ -64,7 +73,8 @@
     "streams.append( (d.behavioral_data, 3) )\n",
     "\n",
     "p1 = Pipeline([\n",
-    "    CenteringTransformer(input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    CenteringTransformer(init_size=0, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    # CenteringTransformer(init_size=0, input_streams={1:'X'}, output_streams={1:1}),\n",
     "    KernelSmoother(tau=0.08/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}),\n",
     "    pro:=proSVD(k=6, init_size=100, input_streams={2:'X'}, output_streams={2:2}),\n",
@@ -73,7 +83,8 @@
     "\n",
     "p2 = Pipeline([\n",
     "    bw:=Bubblewrap(\n",
-    "        num=500,\n",
+    "        num=1000,\n",
+    "        M=500,\n",
     "        eps=1e-6,\n",
     "        step=1e-3,\n",
     "        num_grad_q=1,\n",
@@ -90,7 +101,7 @@
     "\n",
     "\n",
     "video_dt = 0.1\n",
-    "video_ts = np.arange(50)*video_dt + 25\n",
+    "video_ts = np.arange(50)*video_dt + 150\n",
     "streams.append( (NumpyTimedDataSource(np.nan * video_ts, video_ts), 'video') )\n",
     "\n",
     "\n",
@@ -106,8 +117,8 @@
     "bw_am = None\n",
     "with (\n",
     "    plt.ioff(),\n",
-    "    AnimationManager(fps=1/video_dt, filetype='mp4') as bw_am, \n",
-    "    (vid:=pf.PredictionVideo(d, fps=1/video_dt, filetype='mp4')).am as pred_am\n",
+    "    AnimationManager(fps=1/video_dt, filetype='gif') as bw_am, \n",
+    "    (vid:=pf.PredictionVideo(d, fps=1/video_dt, filetype='gif')).am as pred_am\n",
     "):\n",
     "    for output, stream in Pipeline().streaming_run_on(streams, return_output_stream=True):\n",
     "        # dim reduction part of pipeline\n",
@@ -120,7 +131,7 @@
     "        output, stream = p2.partial_fit_transform(output, stream, return_output_stream=True)\n",
     "        if stream == 2 and np.isfinite(output).all():\n",
     "            prediction_t = output.t+bw.dt*1\n",
-    "            alpha_pred = bw.get_alpha_at_t(prediction_t)\n",
+    "            alpha_pred = bw.get_alpha_at_t(0, relative_t=True)\n",
     "            latent_prediction = np.array(bw.mu[np.argmax(alpha_pred)])\n",
     "            beh_prediction = reg.predict(alpha_pred)\n",
     "\n",
@@ -155,7 +166,7 @@
     "            if output.t == video_ts[-1]:\n",
     "                break\n",
     "\n",
-    "        pbar.update(output.t - pbar.n)\n",
+    "        pbar.update(round(output.t,1) - pbar.n)\n",
     "\n",
     "\n",
     "latents = np.squeeze(latents)\n",
@@ -165,19 +176,22 @@
     "\n",
     "plt.close()\n",
     "plt.close()\n",
-    "Bubblewrap.compare_runs([bw]], t_in_samples=True)\n",
+    "\n",
+    "Bubblewrap.compare_runs([bw], t_in_samples=True)\n",
     "plt.show()\n",
     "\n",
     "if pred_am is not None:\n",
-    "    display(Video(pred_am.outfile, embed=True, width=900))\n",
+    "    display_class = Image if 'gif' in str(pred_am.outfile) else Video\n",
+    "    display(display_class(pred_am.outfile, embed=True, width=900))\n",
     "\n",
     "\n",
     "if bw_am is not None:\n",
-    "    display(Video(bw_am.outfile, embed=True, width=700))\n",
+    "    display_class = Image if 'gif' in str(bw_am.outfile) else Video\n",
+    "    display(display_class(bw_am.outfile, embed=True, width=700))\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.matshow(bw.log['alpha'][-30:])\n",
-    "ax.set_title('alpha')\n"
+    "ax.set_title('alpha')"
    ]
   },
   {
@@ -186,40 +200,37 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-25T17:30:59.363269Z",
-     "start_time": "2024-09-25T17:30:59.121507Z"
+     "end_time": "2024-09-27T16:43:19.520803Z",
+     "start_time": "2024-09-27T16:43:19.503384Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
-    "test_s = (\n",
-    "    (d.behavioral_data.t > ((prediction_ts[0] + prediction_ts[1])/2))\n",
-    "    &\n",
-    "    (np.isfinite(d.behavioral_data.a).all(axis=2)[:,0])\n",
-    ")\n",
-    "\n",
-    "# estimates = adaptive_latents.utils.resample_matched_timeseries(beh_predictions, prediction_ts, d.behavioral_data.t[test_s])\n",
-    "# targets = d.behavioral_data.a[test_s,0,:]\n",
-    "\n",
-    "estimates = adaptive_latents.utils.resample_matched_timeseries(d.behavioral_data.a[test_s,0,:],d.behavioral_data.t[test_s],  prediction_ts)\n",
+    "estimates = adaptive_latents.utils.resample_matched_timeseries(d.behavioral_data.a[:,0,:],d.behavioral_data.t,  prediction_ts)\n",
     "targets = beh_predictions\n",
     "\n",
     "errors = estimates - targets\n",
+    "test_s = prediction_ts > (prediction_ts[0] + prediction_ts[-1] )/2\n",
     "\n",
-    "print([np.corrcoef(estimates[:,i], targets[:,i])[0,1] for i in range(3)])"
+    "print([np.corrcoef(estimates[test_s,i], targets[test_s,i])[0,1] for i in range(3)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T16:46:39.760817Z",
+     "start_time": "2024-09-27T16:46:39.566549Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for i in range(3):\n",
-    "    plt.plot(prediction_ts/bw.dt, estimates[:,i], color=f'C{i}')\n",
-    "    plt.plot(prediction_ts/bw.dt, targets[:,i], color=f'C{i}', alpha=.5, label=f'{np.corrcoef(estimates[:,i], targets[:,i])[0,1]:.3f}')\n",
+    "    plt.plot(prediction_ts, estimates[:,i], color=f'C{i}')\n",
+    "    plt.plot(prediction_ts, targets[:,i], color=f'C{i}', alpha=.5, label=f'{np.corrcoef(estimates[test_s,i], targets[test_s,i])[0,1]:.3f}')\n",
+    "plt.axvline(prediction_ts[test_s].min(), color='k')\n",
     "plt.xlabel(\"time (samples)\")\n",
     "plt.ylabel(\"behavior\")\n",
     "plt.legend()"
@@ -231,8 +242,8 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-26T16:19:16.633853Z",
-     "start_time": "2024-09-26T16:19:16.560851Z"
+     "end_time": "2024-09-27T16:43:19.937738Z",
+     "start_time": "2024-09-27T16:43:19.777074Z"
     }
    },
    "outputs": [],
@@ -265,21 +276,13 @@
    "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-26T16:19:18.836031Z",
-     "start_time": "2024-09-26T16:19:18.679899Z"
+     "end_time": "2024-09-27T16:43:20.073345Z",
+     "start_time": "2024-09-27T16:43:19.938468Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "pf.plot_history_with_tail(ax, latents)\n",
-    "means = np.mean(latents, axis=0)\n",
-    "ax.arrow(latents[-1,0], latents[-1,1], means[0] - latents[-1,0], means[1] - latents[-1,1], zorder=5, head_width=.1, color='k')\n",
-    "\n",
-    "ax.axis('off');\n",
-    "\n"
+    "plt.plot(pro.Q[:,0])"
    ]
   },
   {
@@ -288,8 +291,48 @@
    "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-26T16:19:20.991881Z",
-     "start_time": "2024-09-26T16:19:20.940572Z"
+     "end_time": "2024-09-27T16:43:20.233673Z",
+     "start_time": "2024-09-27T16:43:20.076796Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "dim_1, dim_2 = 2,3\n",
+    "pf.plot_history_with_tail(ax, latents, dim_1=dim_1, dim_2=dim_2)\n",
+    "means = np.mean(latents, axis=0)\n",
+    "\n",
+    "ax.arrow(latents[-1,dim_1], latents[-1,dim_2], means[dim_1] - latents[-1,dim_1], means[dim_2] - latents[-1,dim_2], zorder=5, head_width=.1, color='k')\n",
+    "\n",
+    "ax.axis('off');\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T16:43:20.246528Z",
+     "start_time": "2024-09-27T16:43:20.238267Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pro.Q[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T16:43:20.557928Z",
+     "start_time": "2024-09-27T16:43:20.248987Z"
     }
    },
    "outputs": [],
@@ -312,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -321,8 +364,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
-   "metadata": {},
+   "id": "12",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T16:43:20.558829Z",
+     "start_time": "2024-09-27T16:43:20.558772Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
