fixes the precision vs covariance matrix plotting issue
also adds a TestDataset for 2d debugging

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:39:35.093489Z",
-     "start_time": "2024-09-27T16:39:33.417747Z"
+     "end_time": "2024-09-27T22:37:52.612373Z",
+     "start_time": "2024-09-27T22:37:51.140168Z"
     }
    },
    "outputs": [],
@@ -29,8 +29,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:39:35.404604Z",
-     "start_time": "2024-09-27T16:39:35.094587Z"
+     "end_time": "2024-09-27T22:37:52.939884Z",
+     "start_time": "2024-09-27T22:37:52.613632Z"
     }
    },
    "outputs": [],
@@ -53,12 +53,58 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:43:19.500535Z",
-     "start_time": "2024-09-27T16:39:35.407274Z"
-    },
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+     "end_time": "2024-09-27T22:37:52.955612Z",
+     "start_time": "2024-09-27T22:37:52.942832Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class TestDataset(datasets.Dataset):\n",
+    "    doi = None\n",
+    "    automatically_downloadable = False\n",
+    "    model_organism = None\n",
+    "    \n",
+    "    def __init__(self, Fs=33, total_time=600):\n",
+    "        self.rng = np.random.default_rng()\n",
+    "        self.Fs = Fs\n",
+    "        self.bin_width = 1/self.Fs\n",
+    "        self.t = np.linspace(0, total_time, total_time*self.Fs + 1)\n",
+    "        \n",
+    "        neural_data, behavioral_data = self.construct()\n",
+    "        \n",
+    "        self.neural_data = NumpyTimedDataSource(neural_data, self.t)\n",
+    "        self.behavioral_data = NumpyTimedDataSource(behavioral_data, self.t)\n",
+    "\n",
+    "    def acquire(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def construct(self):\n",
+    "        self.acquire()\n",
+    "        # 15 samples is about 2pi end_time\n",
+    "        # 1 sample is bin_width start_time\n",
+    "        speed_factor = self.Fs * np.pi*2 / 15\n",
+    "        neural_data = np.sin(np.vstack(3*[self.t ]).T * speed_factor)\n",
+    "        neural_data = neural_data + self.rng.normal(scale=.1,size=neural_data.shape)\n",
+    "\n",
+    "        behavioral_data = np.sin(np.vstack(3*[self.t]).T * speed_factor)\n",
+    "        behavioral_data = behavioral_data + self.rng.normal(scale=.1,size=behavioral_data.shape)\n",
+    "        return neural_data, behavioral_data\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T22:41:02.321827Z",
+     "start_time": "2024-09-27T22:37:52.959696Z"
     }
    },
    "outputs": [],
@@ -66,6 +112,7 @@
     "%%time\n",
     "%matplotlib inline\n",
     "d = datasets.Odoherty21Dataset()\n",
+    "d = TestDataset()\n",
     "\n",
     "streams = []\n",
     "streams.append( (d.neural_data,     0) )\n",
@@ -73,21 +120,24 @@
     "streams.append( (d.behavioral_data, 3) )\n",
     "\n",
     "p1 = Pipeline([\n",
-    "    CenteringTransformer(init_size=0, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    CenteringTransformer(init_size=50, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    # CenteringTransformer(init_size=0, input_streams={1:'X'}, output_streams={1:1}),\n",
     "    KernelSmoother(tau=0.08/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}),\n",
     "    pro:=proSVD(k=6, init_size=100, input_streams={2:'X'}, output_streams={2:2}),\n",
-    "    sjPCA(init_size=100, input_streams={2:'X'}, output_streams={2:2}),\n",
+    "    jpca:=sjPCA(init_size=100, input_streams={2:'X'}, output_streams={2:2}),\n",
     "])\n",
     "\n",
     "p2 = Pipeline([\n",
     "    bw:=Bubblewrap(\n",
-    "        num=1000,\n",
+    "        num=1000, # 1000\n",
     "        M=500,\n",
-    "        eps=1e-6,\n",
-    "        step=1e-3,\n",
+    "        lam=1e-3,\n",
+    "        nu=1e-3,\n",
+    "        eps=1e-4,\n",
+    "        step=8e-2, # 1e-3\n",
     "        num_grad_q=1,\n",
+    "        sigma_orig_adjustment=100, # 0\n",
     "        input_streams={2:'X'},\n",
     "        output_streams={2:2},\n",
     "        log_level=1,\n",
@@ -100,8 +150,8 @@
     "\n",
     "\n",
     "\n",
-    "video_dt = 0.1\n",
-    "video_ts = np.arange(50)*video_dt + 150\n",
+    "video_dt = 0.05\n",
+    "video_ts = np.arange(100)*video_dt + 150\n",
     "streams.append( (NumpyTimedDataSource(np.nan * video_ts, video_ts), 'video') )\n",
     "\n",
     "\n",
@@ -130,8 +180,16 @@
     "        # prediction part of pipeline\n",
     "        output, stream = p2.partial_fit_transform(output, stream, return_output_stream=True)\n",
     "        if stream == 2 and np.isfinite(output).all():\n",
-    "            prediction_t = output.t+bw.dt*1\n",
-    "            alpha_pred = bw.get_alpha_at_t(0, relative_t=True)\n",
+    "            prediction_t = output.t + bw.dt\n",
+    "            \n",
+    "            # alpha_pred = bw.get_alpha_at_t(0, relative_t=True)\n",
+    "            \n",
+    "            alpha_pred = bw.get_alpha_at_t(prediction_t)\n",
+    "            \n",
+    "            # alpha_pred[np.argmax(bw.alpha)] = 0\n",
+    "            # alpha_pred[alpha_pred < alpha_pred.max()] = 0\n",
+    "            # alpha_pred = alpha_pred / alpha_pred.sum()\n",
+    "            \n",
     "            latent_prediction = np.array(bw.mu[np.argmax(alpha_pred)])\n",
     "            beh_prediction = reg.predict(alpha_pred)\n",
     "\n",
@@ -197,13 +255,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-27T16:43:19.520803Z",
-     "start_time": "2024-09-27T16:43:19.503384Z"
-    }
-   },
+   "id": "5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "estimates = adaptive_latents.utils.resample_matched_timeseries(d.behavioral_data.a[:,0,:],d.behavioral_data.t,  prediction_ts)\n",
@@ -218,11 +271,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:46:39.760817Z",
-     "start_time": "2024-09-27T16:46:39.566549Z"
+     "end_time": "2024-09-27T22:41:36.816596Z",
+     "start_time": "2024-09-27T22:41:36.735509Z"
     }
    },
    "outputs": [],
@@ -233,17 +286,18 @@
     "plt.axvline(prediction_ts[test_s].min(), color='k')\n",
     "plt.xlabel(\"time (samples)\")\n",
     "plt.ylabel(\"behavior\")\n",
+    "plt.xlim([120, 121])\n",
     "plt.legend()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:43:19.937738Z",
-     "start_time": "2024-09-27T16:43:19.777074Z"
+     "end_time": "2024-09-27T22:41:02.582258Z",
+     "start_time": "2024-09-27T22:41:02.510078Z"
     }
    },
    "outputs": [],
@@ -273,40 +327,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-27T16:43:20.073345Z",
-     "start_time": "2024-09-27T16:43:19.938468Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(pro.Q[:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:43:20.233673Z",
-     "start_time": "2024-09-27T16:43:20.076796Z"
+     "end_time": "2024-09-27T22:52:10.336231Z",
+     "start_time": "2024-09-27T22:52:10.290673Z"
     }
    },
    "outputs": [],
    "source": [
+    "e1, e2 = np.zeros(6), np.zeros(6)\n",
+    "e1[0] = 1\n",
+    "e2[1] = 1\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "dim_1, dim_2 = 2,3\n",
-    "pf.plot_history_with_tail(ax, latents, dim_1=dim_1, dim_2=dim_2)\n",
-    "means = np.mean(latents, axis=0)\n",
-    "\n",
-    "ax.arrow(latents[-1,dim_1], latents[-1,dim_2], means[dim_1] - latents[-1,dim_1], means[dim_2] - latents[-1,dim_2], zorder=5, head_width=.1, color='k')\n",
-    "\n",
-    "ax.axis('off');\n",
+    "plt.plot(jpca.inverse_transform(pro.inverse_transform(e1, 2), 2))\n",
+    "plt.plot(jpca.inverse_transform(pro.inverse_transform(e2, 2), 2))\n",
     "\n"
    ]
   },
@@ -316,8 +351,63 @@
    "id": "9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:43:20.246528Z",
-     "start_time": "2024-09-27T16:43:20.238267Z"
+     "end_time": "2024-09-27T22:44:12.370596Z",
+     "start_time": "2024-09-27T22:44:12.358668Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "jpca.get_U()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T22:41:02.672199Z",
+     "start_time": "2024-09-27T22:41:02.618947Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "plt.matshow(bw.A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T22:51:23.876885Z",
+     "start_time": "2024-09-27T22:51:23.812434Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "dim_1, dim_2 = 0,1\n",
+    "pf.plot_history_with_tail(ax, latents, dim_1=dim_1, dim_2=dim_2)\n",
+    "means = np.mean(latents, axis=0)\n",
+    "\n",
+    "ax.arrow(latents[-1,dim_1], latents[-1,dim_2], means[dim_1] - latents[-1,dim_1], means[dim_2] - latents[-1,dim_2], zorder=5, head_width=.1, color='k')\n",
+    "\n",
+    "ax.axis('equal');\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T22:41:02.716498Z",
+     "start_time": "2024-09-27T22:41:02.707208Z"
     }
    },
    "outputs": [],
@@ -328,11 +418,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:43:20.557928Z",
-     "start_time": "2024-09-27T16:43:20.248987Z"
+     "end_time": "2024-09-27T22:41:02.867290Z",
+     "start_time": "2024-09-27T22:41:02.717070Z"
     }
    },
    "outputs": [],
@@ -355,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -364,11 +454,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T16:43:20.558829Z",
-     "start_time": "2024-09-27T16:43:20.558772Z"
+     "end_time": "2024-09-27T22:41:02.868007Z",
+     "start_time": "2024-09-27T22:41:02.867944Z"
     }
    },
    "outputs": [],
